--- a/src/Map.css
+++ b/src/Map.css
@@ -4,7 +4,8 @@
     padding: 1rem;
     border-radius: 20px;
     margin-top:16px;
-    box-shadow: 0 0 8px -4px rgba(0,0,0,0.5)
+    box-shadow: 0 0 8px -4px rgba(0,0,0,0.5);
+    margin-bottom: 30px;
 }
 .map .leaflet-container{
     height: 100%;
